--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -137,7 +137,7 @@
       <span style="font-size:12px;cursor:pointer;" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span>
     </div>
 
-    <div class="col-xs-12 text-center">
+    <div class="col-xs-12 text-center" style="padding-top:15px">
       <div class="row">
         <a ng-href="{{settings.facebookLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #125688;color: white;border-radius: 50%;">
           <i style="font-size:12px;" class="fa fa-facebook fa-stack-1x"></i>
@@ -157,7 +157,7 @@
           <span style="color:rgb(24, 89, 46)">Download Our App</span>
         </div>
         <div class="row">
-        <a ng-if="settings.playstoreLink.indexOf('http')!=-1" ng-href="{{settings.playstoreLink}}"><img src="/static/images/googleplay.png" alt="Google Application"   width="10%" style="margin-top: 10px;"></a>
+        <a ng-if="settings.playstoreLink.indexOf('http')!=-1" ng-href="{{settings.playstoreLink}}"><img src="/static/images/googleplay.png" alt="Google Application"   width="25%" style="margin-top: 10px;"></a>
       </div>
       <!-- <div class="row">
         <span style="font-size:12px;color:rgb(24, 89, 46)">Copyright &copy; {{settings.copyrightHolder}} {{settings.copyrightYear}}</span>
