--- a/ecommerce/static/ngTemplates/app.ecommerce.account.menu.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.menu.html
@@ -44,7 +44,7 @@
       <a  ui-sref="account.saved">
         <div align="center">
           <i class="fa fa-heart fa-2x pull-left"></i>
-          Saved
+          Wishlist
         </div>
       </a>
     </li>
