--- a/ecommerce/static/ngTemplates/app.ecommerce.account.saved.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.saved.item.html
@@ -13,8 +13,16 @@
           </span>
         </div>
         <hr style="margin:0px;">
-        <div class="row container-fluid text-center" style="background-color:#2980B9; color:white; margin:0px; padding:10px;">
+        <!-- <div class="row container-fluid text-center" style="background-color:#2980B9; color:white; margin:0px; padding:10px;">
           <span style="cursor:pointer" ng-click="rowActionClicked('unfavourite')"> Add to cart</span>
+        </div> -->
+        <div class="row container-fluid" style="background-color:#2980B9; color:white; margin:0px; padding:10px;" >
+          <div class="col-md-6 col-sm-6 col-xs-6 text-center">
+            <i class="fa {{data.typ=='favourite'? 'fa-shopping-cart':'fa-heart'}} fa-2x" style="cursor:pointer;" ng-click="rowActionClicked(data.typ=='cart'? 'favourite':'unfavourite')" ></i>
+          </div>
+          <div class="col-md-6 col-sm-6 col-xs-6 text-center" >
+            <i class="fa fa-trash-o fa-2x" style="cursor:pointer;" ng-click="rowActionClicked('deleteItem')"></i>
+          </div>
         </div>
       </div>
     </div>
