--- a/ecommerce/static/ngTemplates/app.ecommerce.account.topMenu.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.topMenu.html
@@ -1,10 +1,10 @@
-<div class="row bg-blue">
+<div class="row bg-blue" style="width:90%">
   <div class="col-xs-12">
     <h5 style="color: white">  <i class="fa fa-user fa-2x"></i>
      Accounts</h5>
   </div>
 </div>
-<div class="row bg-blue" >
+<div class="row bg-blue" style="width:90%">
   <div class="col-xs-2 col-xs-offset-1 text-center" ng-click="$state.go('account.cart')" ng-class="{activeTopTabAcnt: $state.is('account.cart')}" style="cursor:pointer;">
     <div class="row" style="padding:0px;">
       <i class="fa fa-shopping-cart"></i>
