--- a/support/static/ngTemplates/app.customers.form.html
+++ b/support/static/ngTemplates/app.customers.form.html
@@ -124,6 +124,10 @@
           </div>
         </div>
       </div>
+      <div class="form-group">
+        <label>First Message</label>
+        <textarea ui-tinymce="tinymceOptions" ng-model="cpForm.firstMessage"></textarea>
+      </div>
     </div><br>
     <button type="button" class="btn btn-primary btn-lg col-md-2 col-md-offset-5" ng-click="saveCustomerProfile()">Save</button>
   </div>
