--- a/PIM/static/ngTemplates/app.home.dashboard.html
+++ b/PIM/static/ngTemplates/app.home.dashboard.html
@@ -1,50 +1,236 @@
-<!-- <div class="shaddowed card bg-white" style="min-height:93vh;">
-
-<breadcrumb></breadcrumb>
-<div class="conainer" style="position:absolute">
-  <div class="row" style="height:225px">
-    <div class="col-md-2" style="height:225px"></div>
-    <div class="col-md-8" style="height:225px">
-      <div class="container-fluid" style="padding-top: 0px;padding-left: 250px;">
-        <div id="chart-container2"></div>
-      </div>
-  </div>
-  <div class="col-md-2" style="height:225px">
-
-  </div>
-  </div>
-  <div class="row" style="height:200px">
-    <div class="col-md-5" style="height:200px">
-      <div class="container-fluid" style="padding-left: 500px;">
-        <div id="chart-container1"></div>
-      </div>
-    </div>
-    <div class="col-md-2" style="height:200px">
-      <img src="/static/images/hero.jpg"></img>
-    </div>
-    <div class="col-md-5" style="height:200px">
-      <div class="container-fluid" style="padding-left: 200px;">
-        <div id="chart-container3"></div>
-      </div>
-    </div>
-  </div>
-  <div class="row" style="height:225px">
-    <div class="col-md-2" style="height:225px"></div>
-    <div class="col-md-8" style="height:225px">
-      <div class="container-fluid" style="padding-top: 0px;padding-left: 250px;">
-        <div id="chart-container4"></div>
-      </div>
-    </div>
-    <div class="col-md-2" style="height:225px"></div>
-  </div>
-</div>
-
-</div> -->
-<div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
+<div class="shaddowed card" style="min-height:93vh;position:relative;background-color:#3e4247">
 
   <breadcrumb></breadcrumb>
-    <div class="container-fluid">
-      <div class="col-md-3 col-sm-6 col-xs-12">
+  <div class="container-fluid" style="color:white">
+
+    <div class="row">
+      <div class="col-md-12">
+        <h3>Activity <span>Past 7 Days {{homeData}}</span></h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 ">
+        <div class="container-fluid" style="background-color:#292a24;">
+          <div class="row" style="padding:25px">
+            <div class="row">
+              <div class="col-md-6">
+                <h4># Of Chats &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
+              </div>
+              <div class="col-md-6 text-right">
+                <h4><i class="fa fa-sort-asc fa-lg" style="color:#bcd46e"></i> &nbsp;78.26%</h4>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <h3>{{totalChats}}</h3>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <!-- <canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="barlabels"> chart-series="series"</canvas> -->
+                <canvas id="bar" class="chart chart-bar" chart-data="barData" chart-labels="barlabels" chart-series="series" chart-colors="barColours" chart-options="sharesOptions">
+                </canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 ">
+        <div class="container-fluid" style="background-color:#292a24;">
+          <div class="row" style="padding:25px">
+            <div class="row">
+              <div class="col-md-12">
+                <h4>Agent Leaderboard &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
+              </div>
+            </div>
+            <div class="row col-md-12" >
+              <table class="table" style="font-size:18px">
+                <thead>
+                  <tr style="color:#43c8b0">
+                    <th style="border: 0;">Name</th>
+                    <th style="border: 0;"># Of Chats</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr ng-repeat="agent in agentChatCount" ng-if="agent.user != 'noUser'">
+                    <td style="border: 0;">{{agent.user | getName}}</td>
+                    <td style="border: 0;">{{agent.count_val}}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row" style="margin-top:20px">
+      <div class="col-md-6 ">
+        <div class="container-fluid" style="background-color:#292a24;">
+          <div class="row" style="padding:25px">
+            <div class="row">
+              <div class="col-md-6">
+                <h4># Of Missed Chats &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
+              </div>
+              <div class="col-md-6 text-right">
+                <h4><i class="fa fa-sort-desc fa-lg" style="color:#bcd46e"></i> &nbsp;77.78%</h4>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <h3>{{missedChats}}</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 ">
+        <div class="container-fluid" style="background-color:#292a24;">
+          <div class="row" style="padding:25px">
+            <div class="row">
+              <div class="col-md-6">
+                <h4>Average Chat Duration &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
+              </div>
+              <div class="col-md-6 text-right">
+                <h4><i class="fa fa-sort-asc fa-lg" style="color:#e85c30"></i> &nbsp;19.44%</h4>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <h3>12:24</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h3>Satisfaction <span>Past 7 Days</span></h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 ">
+        <div class="container-fluid" style="background-color:#292a24;">
+          <div class="row" style="padding:25px">
+            <div class="row">
+              <div class="col-md-6">
+                <h4>Average Rating &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
+              </div>
+              <div class="col-md-6 text-right">
+                <h4><i class="fa fa-sort-asc fa-lg" style="color:#bcd46e"></i> &nbsp;2.94%</h4>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <h3>4.9</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid" style="background-color:#292a24;margin-top:20px">
+          <div class="row" style="padding:25px">
+            <div class="row">
+              <div class="col-md-6">
+                <h4>Average Response Time(ART) &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
+              </div>
+              <div class="col-md-6 text-right">
+                <h4><i class="fa fa-sort-asc fa-lg" style="color:#e85c30"></i> &nbsp;38.21%</h4>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <h3>00:50</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid" style="background-color:#292a24;margin-top:20px">
+          <div class="row" style="padding:25px">
+            <div class="row">
+              <div class="col-md-6">
+                <h4>Average First Response Time(AFRT) &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
+              </div>
+              <div class="col-md-6 text-right">
+                <h4><i class="fa fa-sort-desc fa-lg" style="color:#bcd46e"></i> &nbsp;27.75%</h4>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <h3>01:16</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 ">
+        <div class="container-fluid" style="background-color:#292a24;">
+          <div class="row" style="padding:25px">
+            <div class="row">
+              <div class="col-md-12">
+                <h4>Agent Leaderboard &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
+              </div>
+            </div>
+            <div class="row col-md-12" >
+              <table class="table" style="font-size:18px">
+                <thead>
+                  <tr style="color:#43c8b0">
+                    <th style="border: 0;">Name</th>
+                    <th style="border: 0;">ART</th>
+                    <th style="border: 0;">AFRT</th>
+                    <th style="border: 0;">Rating</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td style="border: 0;">Default</td>
+                    <td style="border: 0;">Defaultson</td>
+                    <td style="border: 0;">Defaultson</td>
+                    <td style="border: 0;">Defaultson</td>
+                  </tr>
+                  <tr>
+                    <td style="border: 0;">Success</td>
+                    <td style="border: 0;">Doe</td>
+                    <td style="border: 0;">Defaultson</td>
+                    <td style="border: 0;">Defaultson</td>
+                  </tr>
+                  <tr>
+                    <td style="border: 0;">Danger</td>
+                    <td style="border: 0;">Moe</td>
+                    <td style="border: 0;">Defaultson</td>
+                    <td style="border: 0;">Defaultson</td>
+                  </tr>
+                  <tr>
+                    <td style="border: 0;">Info</td>
+                    <td style="border: 0;">Dooley</td>
+                    <td style="border: 0;">Defaultson</td>
+                    <td style="border: 0;">Defaultson</td>
+                  </tr>
+                  <tr>
+                    <td style="border: 0;">Warning</td>
+                    <td style="border: 0;">Refs</td>
+                    <td style="border: 0;">Defaultson</td>
+                    <td style="border: 0;">Defaultson</td>
+                  </tr>
+                  <tr>
+                    <td style="border: 0;">Active</td>
+                    <td style="border: 0;">Activeson</td>
+                    <td style="border: 0;">Defaultson</td>
+                    <td style="border: 0;">Defaultson</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+    <!-- <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="info-box bg-aqua">
           <span class="info-box-icon info-box-faIcon"><i class="fa fa-link"></i></span>
           <div class="info-box-content">
@@ -56,9 +242,9 @@
             <span class="progress-description">
               40% Increase in 30 Days
             </span>
-          </div><!-- /.info-box-content -->
-        </div><!-- /.info-box -->
-      </div><!-- /.col -->
+          </div>
+        </div>
+      </div>
       <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="info-box bg-green">
           <span class="info-box-icon info-box-faIcon"><i class="fa fa-thumbs-o-up"></i></span>
@@ -71,9 +257,9 @@
             <span class="progress-description">
               70% Increase in 30 Days
             </span>
-          </div><!-- /.info-box-content -->
-        </div><!-- /.info-box -->
-      </div><!-- /.col -->
+          </div>
+        </div>
+      </div>
       <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="info-box bg-red">
           <span class="info-box-icon info-box-faIcon"><i class="fa fa-music"></i></span>
@@ -86,9 +272,9 @@
             <span class="progress-description">
               70% Increase in 30 Days
             </span>
-          </div><!-- /.info-box-content -->
-        </div><!-- /.info-box -->
-      </div><!-- /.col -->
+          </div>
+        </div>
+      </div>
       <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="info-box bg-yellow">
           <span class="info-box-icon info-box-faIcon"><i class="fa fa-amazon"></i></span>
@@ -101,9 +287,9 @@
             <span class="progress-description">
               50% Increase in 30 Days
             </span>
-          </div><!-- /.info-box-content -->
-        </div><!-- /.info-box -->
-      </div><!-- /.col -->
+          </div>
+        </div>
+      </div>
 
       <div class="row">
         <div class="col-md-5 col-md-offset-1">
@@ -111,108 +297,81 @@
             chart-labels="labels" chart-legend="true" chart-series="series"
             chart-click="onClick" >
           </canvas>
-        </div>
+              </div>
 
-        <div class="col-md-6">
-          <canvas id="doughnut" class="chart chart-doughnut"
-            chart-data="data2" chart-labels="labels2">
+              <div class="col-md-6">
+                <canvas id="doughnut" class="chart chart-doughnut" chart-data="data2" chart-labels="labels2">
           </canvas>
-        </div>
+              </div>
 
-      </div>
-
-
-
-      <div class="col-lg-2 col-xs-6">
-        <!-- small box -->
-        <div class="small-box bg-aqua">
-          <div class="inner">
-            <h3>150</h3>
-            <p>New Orders</p>
-          </div>
-          <div class="icon">
-            <i class="fa fa-shopping-cart"></i>
-          </div>
-          <a href="#" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
-        </div>
-      </div><!-- ./col -->
-      <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
-        <div class="small-box bg-green">
-          <div class="inner">
-            <h3>53<sup style="font-size: 20px">%</sup></h3>
-            <p>Bounce Rate</p>
-          </div>
-          <div class="icon">
-            <i class="fa fa-bar-chart"></i>
-          </div>
-          <a href="#" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
-        </div>
-      </div><!-- ./col -->
-      <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
-        <div class="small-box bg-yellow">
-          <div class="inner">
-            <h3>44</h3>
-            <p>User Registrations</p>
-          </div>
-          <div class="icon">
-            <i class="fa fa-user-plus"></i>
-          </div>
-          <a href="#" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
-        </div>
-      </div><!-- ./col -->
-      <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
-        <div class="small-box bg-red">
-          <div class="inner">
-            <h3>65</h3>
-            <p>Unique Visitors</p>
-          </div>
-          <div class="icon">
-            <i class="fa fa-pie-chart"></i>
-          </div>
-          <a href="#" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
-        </div>
-      </div><!-- ./col -->
-
-
-
-
-
-
-      <!-- <div class="col-md-3">
-        <div class="box box-widget widget-user-2">
-          <div class="widget-user-header bg-yellow">
-            <div class="widget-user-image">
-              <img class="img-circle" src="{{MEDIA_URL}}{{user.profile.displayPicture}}" alt="User Avatar">
             </div>
-            <h3 class="widget-user-username">Nadia Carmichael</h3>
-            <h5 class="widget-user-desc">Lead Developer</h5>
+
+
+
+            <div class="col-lg-2 col-xs-6">
+              <div class="small-box bg-aqua">
+                <div class="inner">
+                  <h3>150</h3>
+                  <p>New Orders</p>
+                </div>
+                <div class="icon">
+                  <i class="fa fa-shopping-cart"></i>
+                </div>
+                <a href="#" class="small-box-footer">
+            More info <i class="fa fa-arrow-circle-right"></i>
+          </a>
+              </div>
+            </div>
+            <div class="col-lg-3 col-xs-6">
+              <div class="small-box bg-green">
+                <div class="inner">
+                  <h3>53<sup style="font-size: 20px">%</sup></h3>
+                  <p>Bounce Rate</p>
+                </div>
+                <div class="icon">
+                  <i class="fa fa-bar-chart"></i>
+                </div>
+                <a href="#" class="small-box-footer">
+            More info <i class="fa fa-arrow-circle-right"></i>
+          </a>
+              </div>
+            </div>
+            <div class="col-lg-3 col-xs-6">
+              <div class="small-box bg-yellow">
+                <div class="inner">
+                  <h3>44</h3>
+                  <p>User Registrations</p>
+                </div>
+                <div class="icon">
+                  <i class="fa fa-user-plus"></i>
+                </div>
+                <a href="#" class="small-box-footer">
+            More info <i class="fa fa-arrow-circle-right"></i>
+          </a>
+              </div>
+            </div>
+            <div class="col-lg-3 col-xs-6">
+              <div class="small-box bg-red">
+                <div class="inner">
+                  <h3>65</h3>
+                  <p>Unique Visitors</p>
+                </div>
+                <div class="icon">
+                  <i class="fa fa-pie-chart"></i>
+                </div>
+                <a href="#" class="small-box-footer">
+            More info <i class="fa fa-arrow-circle-right"></i>
+          </a>
+              </div>
+            </div> -->
+
+
+
+
+
+
+
           </div>
-          <div class="box-footer no-padding">
-            <ul class="nav nav-stacked">
-              <li><a href="#">Projects <span class="pull-right badge bg-blue">31</span></a></li>
-              <li><a href="#">Tasks <span class="pull-right badge bg-aqua">5</span></a></li>
-              <li><a href="#">Completed Projects <span class="pull-right badge bg-green">12</span></a></li>
-              <li><a href="#">Followers <span class="pull-right badge bg-red">842</span></a></li>
-            </ul>
-          </div>
+
+
         </div>
-      </div> -->
-
-
-
-
-  </div>
-
-
-</div>
