--- a/PIM/static/ngTemplates/app.home.dashboard.html
+++ b/PIM/static/ngTemplates/app.home.dashboard.html
@@ -5,7 +5,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3>Activity <span>Past 7 Days {{homeData}}</span></h3>
+        <h3>Activity <span>Past 7 Days</span></h3>
       </div>
     </div>
     <div class="row">
