--- a/homepage/static/ngTemplates/app.customer.dashboardGraph.html
+++ b/homepage/static/ngTemplates/app.customer.dashboardGraph.html
@@ -25,7 +25,7 @@
           <!-- <div class="row"> -->
             <div class="col-sm-12" style="padding-top:25px">
               <!-- <canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="barlabels"> chart-series="series"</canvas> -->
-              <canvas id="dashboardBar" class="chart chart-bar" chart-data="barData" chart-labels="barlabels" chart-series="series" chart-colors="barColours" chart-options="sharesOptions">
+              <canvas id="bar" class="chart chart-bar" chart-data="barData" chart-labels="barlabels" chart-series="series" chart-colors="barColours" chart-options="sharesOptions">
                 </canvas>
             </div>
           <!-- </div> -->
