--- a/ecommerce/static/ngTemplates/app.ecommerce.account.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.html
@@ -1,6 +1,6 @@
 
 
-<div class="container-fluid hidden-sm hidden-xs" style="margin-top:20px;margin-bottom:20px;">
+<div class="container-fluid hidden-sm hidden-xs" style="margin:0px">
   <div class="col-md-10 col-md-offset-1 card bg-white" style="display:block;position:relative;min-height:760px;padding-left:0px;">
     <div class="col-md-2  bg-blue" style="position:absolute; height:100%;">
       <div ui-view="menu"></div>
@@ -13,11 +13,11 @@
   </div>
 </div>
 
-<div class="container-fluid hidden-lg hidden-md " style="margin-top:20px;margin-bottom:20px;padding-left:0px;padding-right:0px">
-  <div class="col-md-12 card bg-white" style="display:block;position:relative;min-height:760px;padding-left:0px;">
-    <div class="row bg-blue" style="height:20vh; margin-left:0px;padding-left:10px;">
+<div class="container-fluid hidden-lg hidden-md " style="margin-top:20px;margin-bottom:20px;padding-left:0px;padding-right:0px;margin-right: -31px">
+  <div class="col-md-12" >
+    <!-- <div class="row" > -->
       <div ui-view="topMenu"></div>
-    </div>
+    <!-- </div> -->
     <div class="col-md-10 col-md-offset-2">
       <div class="container-fluid" style="margin-top:30px;">
         <div ui-view></div>
