--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <div class="row bg-purple hidden-md hidden-lg" style="margin-left:0px; height:10vh;  padding-bottom:25px; " >
+    <div class="row bg-purple hidden-md hidden-lg" style="margin-left:0px; padding-bottom:25px; " >
       <div class="col-xs-12" >
           <h4 style="color:white;">
         <i class="fa fa-shopping-cart fa-2x"></i> Checkout
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="row bg-purple hidden-md hidden-lg" style="margin-left:0px; height:10vh;  padding-bottom:25px; " >
+    <div class="row bg-purple hidden-md hidden-lg" style="margin-left:0px; height:15vh;  padding-bottom:25px; " >
       <div class="col-xs-4 text-center  " ng-class="{activeTopTab: data.stage == 'review'}" >
         <div class="row " style="padding:0px;" >
           <i class="fa fa-check"></i>
