--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -141,7 +141,7 @@
   </div> -->
 </div>
 
-<div ng-init="showFeedback=false;" class="bg-white card" style="position:fixed; top:35vh;right:{{!showFeedback ? '0' : '0'}}px;transition:right 0.1s linear;
+<!-- <div ng-init="showFeedback=false;" class="bg-white card" style="position:fixed; top:35vh;right:{{!showFeedback ? '0' : '0'}}px;transition:right 0.1s linear;
   width:350px;height:460px; z-index:10;border-left:solid 5px #136ab1;" ng-if="feddbackPannel">
   <div style="position:absolute;right:290px;width:150px;height:32px;top:100px;background-color:#136ab1;cursor:pointer;
     transform: rotate(-90deg);border-radius : 6px 6px 0px 0px; padding-right:20px;padding-left:20px;" ng-click="showFeedback = !showFeedback;">
@@ -199,4 +199,4 @@
 
 
 </div>
- </div>
+ </div> -->
