--- a/productsInventory/static/ngTemplates/app.productsInventory.store.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.store.html
@@ -28,9 +28,10 @@
           <div style="margin-top:30px;" ng-include="'/static/ngTemplates/app.productsInventory.store.form.html'"></div>
         </div>
         <div ng-if="tab.app == 'storeInfo'">
-          <div ng-include="'/static/ngTemplates/app.productsInventory.store.explore.html'"></div>
+          <div ng-include="'/static/ngTemplates/app.productsInventory.store.expolre.html'"></div>
         </div>
       </uib-tab>
+
     </uib-tabset>
   </div>
 
