--- a/productsInventory/static/ngTemplates/app.productsInventory.store.item.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.store.item.html
@@ -17,11 +17,11 @@
       <div class="col-md-2">
         <div style="padding-right:20px;">
           <div class="row">
-            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('edit')">
+            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('storeEditor')">
             <i class="fa fa-pencil fa-lg" style="margin-top:0px;"></i>
           </span> <br><br>
             <span class="pull-right" style="cursor:pointer;">
-          <i class="fa fa-info-circle fa-lg" style="margin-top:0px;" ng-click="rowActionClicked('info')"></i>
+          <i class="fa fa-info-circle fa-lg" style="margin-top:0px;" ng-click="rowActionClicked('storeInfo')"></i>
         </span>
 
           </div>
