--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -1,42 +1,80 @@
 <div class="container-fluid bg-white" style="position:relative; width:100%; bottom:0px; padding:20px;padding-top:0px;margin-top:20px">
   <div class="row" style="border-top:3px solid #eeeeee;border-bottom:3px solid #eeeeee">
-    <div class="col-md-12">
-      <div class="col-md-4" style="border-right:3px solid #eeeeee;">
+    <div class="col-md-12 hidden-sm hidden-xs">
+      <div class="col-md-4 hidden-sm hidden-xs" style="border-right:3px solid #eeeeee;">
         <div class="row">
-          <div class="col-xs-6" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+          <div class="col-md-6 hidden-sm hidden-xs" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-map-marker fa-lg pull-right"></i>
           </div>
           <!-- <div class="col-xs-6" style="padding:15px 0px;padding-bottom:30px">
             <h2> <i class="fa fa-map-marker fa-lg pull-right"></i></h2>
           </div> -->
-          <div class="col-xs-6" style="font-size:15px;padding-top:20px">
+          <div class="col-md-6 hidden-sm hidden-xs" style="font-size:15px;padding-top:20px">
             <span class="text-center">TRACK YOUR <br>ORDER</span>
           </div>
         </div>
       </div>
-      <div class="col-md-4" style="border-right:3px solid #eeeeee;">
+      <div class="col-md-4 hidden-sm hidden-xs" style="border-right:3px solid #eeeeee;">
         <div class="row">
-          <div class="col-xs-6" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+          <div class="col-md-6 hidden-sm hidden-xs" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-refresh fa-lg pull-right"></i>
           </div>
           <!-- <div class="col-xs-6" style="padding:15px 0px;padding-bottom:30px">
             <h2> <i class="fa fa-refresh fa-lg pull-right"></i></h2>
           </div> -->
-          <div class="col-xs-6" style="font-size:15px;padding-top:20px">
+          <div class="col-md-6 hidden-sm hidden-xs" style="font-size:15px;padding-top:20px">
             <span class="text-center">FREE & EASY <br>RETURNS</span>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 hidden-sm hidden-xs">
         <div class="row">
-          <div class="col-xs-6" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+          <div class="col-md-6 hidden-sm hidden-xs" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-times-circle-o fa-lg pull-right"></i>
           </div>
-          <div class="col-xs-6" style="font-size:15px;padding-top:20px">
+          <div class="col-md-6 hidden-sm hidden-xs" style="font-size:15px;padding-top:20px">
             <span class="text-center">ONLINE <br>CANCELLATION</span>
           </div>
         </div>
       </div>
+    </div>
+    <div class="col-xs-12 hidden-lg hidden-md">
+
+        <div class="row">
+          <div class="col-xs-6   hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+            <i class="fa fa-map-marker fa-lg pull-right"></i>
+          </div>
+          <!-- <div class="col-xs-6" style="padding:15px 0px;padding-bottom:30px">
+            <h2> <i class="fa fa-map-marker fa-lg pull-right"></i></h2>
+          </div> -->
+          <div class="col-xs-6  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
+            <span class="text-center">TRACK YOUR <br>ORDER</span>
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="col-xs-6  hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+            <i class="fa fa-refresh fa-lg pull-right"></i>
+          </div>
+          <!-- <div class="col-xs-6" style="padding:15px 0px;padding-bottom:30px">
+            <h2> <i class="fa fa-refresh fa-lg pull-right"></i></h2>
+          </div> -->
+          <div class="col-xs-6  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
+            <span class="text-center">FREE & EASY <br>RETURNS</span>
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="col-xs-6  hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+            <i class="fa fa-times-circle-o fa-lg pull-right"></i>
+          </div>
+          <div class="col-xs-6  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
+            <span class="text-center">ONLINE <br>CANCELLATION</span>
+          </div>
+        </div>
+
     </div>
   </div>
 
