--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -301,14 +301,14 @@
   </div>
 
 
-  <div class="col-xs-12 hidden-md hidden-lg" style="padding:40px; padding-top:0px;">
+  <!-- <div class="col-xs-12 hidden-md hidden-lg" style="padding:40px; padding-top:0px;">
     <div style="padding:10px;" class="row card bg-white">
       <h4>Recently Viewed</h4>
       <div class="row">
         <div class=" col-xs-12 col-sm-6" ng-repeat="l in recentlyViewed">
           <product-card list="l" add-cart="addToCart"></product-card>
         </div>
-      </div>
+      </div> -->
       <!-- <div ng-repeat="r in recentlyViewed" style="padding:0px;">
         <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out">
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.product.pk,name:r.product.product.name.split(' ').join('-')})">
@@ -339,8 +339,8 @@
           </div>
         </div>
       </div> -->
-    </div>
-  </div>
+    <!-- </div>
+  </div> -->
 
 
 
