--- a/productsInventory/static/ngTemplates/app.productsInventory.store.form.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.store.form.html
@@ -1,28 +1,28 @@
-<div class="container-fluid" >
+<div class="container-fluid" ng-controller="businessManagement.productsInventory.store.form">
   <div class="col-md-6">
 
     <h3 ng-if="mode == 'new'">Create a new Store</h3>
     <h3 ng-if="mode != 'new'">Edit Store  </h3>
 
     <div class="form-group">
-      <label>Name</label>
-      <input type="text" class="form-control" ng-model="form.name" placeholder="enter name">
+      <label>Store Name</label>
+      <input type="text" class="form-control" ng-model="form.name" placeholder="Enter Store name">
     </div>
     <div class="form-group">
       <label>Mobile</label>
-      <input type="text " class="form-control" ng-model="form.mobile" placeholder="enter Number">
+      <input type="text " class="form-control" ng-model="form.mobile" placeholder="Enter Mobile Number">
     </div>
     <div class="form-group">
       <label>Email</label>
-      <input type="text " class="form-control" ng-model="form.email" placeholder="enter Email">
+      <input type="email" class="form-control" ng-model="form.email" placeholder="Enter Email">
     </div>
     <div class="form-group">
       <label>Address</label>
-      <textarea type="text " class="form-control" ng-model="form.paymentTerm" placeholder="enter Address"></textarea>
+      <textarea type="text " class="form-control" ng-model="form.address" placeholder="Enter Address"></textarea>
     </div>
     <div class="form-group">
       <label>Pincode</label>
-      <input type="text " class="form-control" ng-model="form.pincode" placeholder="enter Pincode">
+      <input type="text " class="form-control" ng-model="form.pincode" placeholder="Enter Pincode">
     </div>
 
     <div class="btn-group btn-group-sm">
