--- a/ecommerce/static/ngTemplates/app.ecommerce.account.topMenu.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.topMenu.html
@@ -1,6 +1,6 @@
 <div class="row bg-blue" style="width:100%; border:0px">
-  <div class="col-xs-12">
-    <h5 style="color: white">  <i class="fa fa-user fa-2x"></i>
+  <div class="col-xs-12" >
+    <h5 style="color: white;padding-left:10px">  <i class="fa fa-user fa-2x"></i>
      Accounts</h5>
   </div>
 </div>
