--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="row bg-purple hidden-md hidden-lg" style="margin-left:0px; height:15vh;  padding-bottom:25px; " >
+    <div class="row bg-purple hidden-md hidden-lg" style="margin-left:0px; height:15vh;  padding-bottom:25px; " ng-if="data.stage=='!confirmation'" >
       <div class="col-xs-4 text-center  " ng-class="{activeTopTab: data.stage == 'review'}" >
         <div class="row " style="padding:0px;" >
           <i class="fa fa-check"></i>
@@ -76,11 +76,11 @@
           Pay
         </span>
       </div>
-      <div class="col-xs-1" ng-if="data.stage=='confirmation'" ng-class="{activeTopTab: data.stage == 'confirmation'}" >
+      <!-- <div class="col-xs-1" ng-if="data.stage=='confirmation'" ng-class="{activeTopTab: data.stage == 'confirmation'}" >
         <div class="row">
           <i class="fa fa-check-circle pull-left"></i>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="col-md-10 col-md-offset-2">
