--- a/ecommerce/static/ngTemplates/app.ecommerce.account.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.html
@@ -13,10 +13,10 @@
   </div>
 </div>
 
-<div class="container-fluid hidden-lg hidden-md " style="margin-top:20px;margin-bottom:20px;padding-left:0px;padding-right:0px;margin-right: -31px">
-  <div class="col-md-12" >
+<div class="container-fluid hidden-lg hidden-md " style="margin-top:20px;margin-bottom:20px;padding-left:0px;padding-right:0px;margin-right: 0px">
+  <div class="col-md-12 " style="padding:0px">
     <!-- <div class="row" > -->
-      <div ui-view="topMenu"></div>
+      <div ui-view="topMenu" class="bg-blue"></div>
     <!-- </div> -->
     <div class="col-md-10 col-md-offset-2">
       <div class="container-fluid" style="margin-top:30px;">
