--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -41,36 +41,36 @@
     <div class="col-xs-12 hidden-lg hidden-md">
 
         <div class="row">
-          <div class="col-xs-6   hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+          <div class="col-xs-5   hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-map-marker fa-lg pull-right"></i>
           </div>
           <!-- <div class="col-xs-6" style="padding:15px 0px;padding-bottom:30px">
             <h2> <i class="fa fa-map-marker fa-lg pull-right"></i></h2>
           </div> -->
-          <div class="col-xs-6  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
+          <div class="col-xs-7  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
             <span class="text-center">TRACK YOUR <br>ORDER</span>
           </div>
         </div>
 
 
         <div class="row">
-          <div class="col-xs-6  hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+          <div class="col-xs-5  hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-refresh fa-lg pull-right"></i>
           </div>
           <!-- <div class="col-xs-6" style="padding:15px 0px;padding-bottom:30px">
             <h2> <i class="fa fa-refresh fa-lg pull-right"></i></h2>
           </div> -->
-          <div class="col-xs-6  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
+          <div class="col-xs-7  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
             <span class="text-center">FREE & EASY <br>RETURNS</span>
           </div>
         </div>
 
 
         <div class="row">
-          <div class="col-xs-6  hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+          <div class="col-xs-5  hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-times-circle-o fa-lg pull-right"></i>
           </div>
-          <div class="col-xs-6  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
+          <div class="col-xs-7  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
             <span class="text-center">ONLINE <br>CANCELLATION</span>
           </div>
         </div>
@@ -167,7 +167,7 @@
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-').toLowerCase()})">Careers</span> <br>
       <span style="cursor:pointer" ng-click="feedbackstatus()">Feedback</span><br>
       <!-- <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br> -->
-      <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span>
+      <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span><br/>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Terms & Condition'.split(' ').join('-').toLowerCase()})">Terms & Condition</span><br>
       <span style="font-size:12px;" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Cancellations'.split(' ').join('-').toLowerCase()})">Cancellations</span><br>
@@ -241,7 +241,7 @@
       <!-- <h4><span style="padding-left:30px"></span>Payment Methods</h4> -->
       <div class="row">
         <div class=" col-xs-12 col-sm-12 hidden-md hidden-lg">
-          <img src="/static/images/payment-methods.svg" alt="Payment Methods" width="100%;" >
+          <img src="/static/images/paymentlogo123.png" alt="Payment Methods" width="100%;" >
         </div>
       </div>
           <!-- <div class="row">
