--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="col-md-1 text-center dropdown hidden-xs hidden-sm">
-    <span class="dropdown-toggle" data-toggle="dropdown" style="cursor:pointer;font-size:17px;color:rgb(24, 89, 46)" ng-if="me.pk" > {{me.first_name}}</span>
+    <span class="dropdown-toggle" data-toggle="dropdown" style="cursor:pointer;font-size:17px;color:rgb(24, 89, 46)" ng-if="me.pk" > {{me.first_name}} <i class="fa fa-user"></i></span>
     <ul class="dropdown-menu " style="margin-right:0px;padding-top:0px;">
       <li> <img ng-src="{{me.pk | getDP}}" style="width: 170px;" alt=""> </li>
       <li><a ui-sref="account.orders" style="color:rgb(24, 89, 46)">Orders</a></li>
@@ -26,13 +26,15 @@
     </ul>
   </div>
 
-  <div class="col-md-2 text-center hidden-xs hidden-sm" ng-if="me.pk" >
-    <span ng-click="$state.go('account.cart')" style="cursor:pointer;font-size:17px;color:rgb(24, 89, 46)" >  Cart <i class="fa fa-shopping-cart fa-lg"></i>
-    <span style="background-color:green;position:relative;text-align:center;  justify-content: center;  top:-10px;  border-radius: 50%;  right: 11px;padding:3px;color:white" ng-if="inCart.length>0">{{inCart.length}}</span>
+  <div class="col-md-2 text-left hidden-xs hidden-sm" ng-if="me.pk" style="padding:right:0px">
+    <spn>
+    <span ng-click="$state.go('account.cart')" style="cursor:pointer;font-size:17px;color:rgb(24, 89, 46);margin-right: -4px;" >  Cart <i class="fa fa-shopping-cart fa-lg"></i></span>
+    <!-- <span style="background-color:green;position:relative;text-align:center;  justify-content: center;  top:-10px;  border-radius: 50%;  right: 11px;padding:3px;color:white" ng-if="inCart.length>0">{{inCart.length}}</span> -->
+      <span style="background-color:green;height: 20px;width: 25px;  border-radius: 50%;color:white;display: table-cell;text-align: center;vertical-align: middle;" ng-if="inCart.length>0" class="text-center">{{inCart.length}}</span>
 </span>
   </div>
 
-
+<!-- ;display: table-cell;text-align: center;vertical-align: middle;position:relative;right: 5px -->
 
 
   <div class="col-md-2 text-center hidden-xs hidden-sm" ng-if="!me.pk">
@@ -48,13 +50,17 @@
     <span style="cursor:pointer;font-size:17px;color:rgb(24, 89, 46)" ng-click="registerPage()"> Register <i class="fa fa-registered fa-lg"></i></span>
   </div>
 
-  <div class="col-xs-offset-3 col-xs-3 text-center hidden-lg hidden-md" ng-if="me.pk" style="padding-top: 10px;color:rgb(24, 89, 46)">
+  <div class="col-xs-offset-1 col-xs-4 text-right hidden-lg hidden-md" ng-if="me.pk" style="padding-top: 10px;padding-right:0px;color:rgb(24, 89, 46)">
     <span ng-click="$state.go('account.cart')" style="cursor:pointer" >  Cart <i class="fa fa-shopping-cart fa-lg"></i>
-      <span style="background-color:green;position:relative;text-align:center;  justify-content: center;  top:-10px;  border-radius: 50%;  right: 11px;padding:3px;color:white" ng-if="inCart.length>0">{{inCart.length}}</span></span>
-  </div>
+      <!-- <span style="background-color:green;position:relative;text-align:center;  justify-content: center;  top:-11px;  border-radius: 50%;  right: 11px;padding:3px;color:white" ng-if="inCart.length>0">{{inCart.length}}</span> -->
+          <span style="background-color:green;height: 20px;width: 20px;  border-radius: 50%;display: table-cell;text-align: center;vertical-align: middle;color:white;position:relative;right: 5px" ng-if="inCart.length>0" class="text-center">{{inCart.length}}</span>
 
-  <div class="col-xs-1 text-center dropdown hidden-lg hidden-md " style="padding-top: 10px;">
-    <span class="dropdown-toggle" data-toggle="dropdown" style="cursor:pointer;color:rgb(24, 89, 46)" ng-if="me.pk" > {{me.first_name}}</span>
+
+
+    </span>
+  </div>
+  <div class="col-xs-4 text-center dropdown hidden-lg hidden-md " style="padding-top: 18px;">
+    <span class="dropdown-toggle" data-toggle="dropdown" style="cursor:pointer;color:rgb(24, 89, 46)" ng-if="me.pk" > {{me.first_name}} <i class="fa fa-user fa-lg"></i></span>
     <ul class="dropdown-menu " style="margin-right:0px;padding-top:0px; left:-80px;">
       <li> <img ng-src="{{me.pk | getDP}}" style="width: 170px;" alt=""> </li>
       <li><a ui-sref="account.orders" style="color:rgb(24, 89, 46)" >Orders</a></li>
