--- a/ecommerce/static/ngTemplates/app.ecommerce.pincodeEnquiry.form.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.pincodeEnquiry.form.html
@@ -1,15 +1,22 @@
 <div class="modal-header text-center" style="font-size:19px">
   <div class="row">
-  <div class="col-md-11">
+    <div class="col-md-1">
+        <i ng-click="close()" class="fa fa-close fa-lg"></i>
+    </div>
+  <div class="col-md-11"  ng-if="!stores">
   Check for Availability of Store nearby you!
 </div>
-<div class="col-md-1">
-    <i ng-click="close()" class="fa fa-close fa-lg"></i>
+<div class="col-md-11" ng-if="stores.length>0">
+Available Stores near you!!!
 </div>
+<div class="col-md-11" ng-if="stores.length==0">
+Sorry!! We Are not Functioning in your Area..<br/>
+</div>
+
 </div>
 </div>
 <div class="row modal-body">
-  <div class="col-md-12">
+  <div class="col-md-12" ng-if="!stores">
     <form>
     <div class="row">
         <div class="col-md-3">
@@ -27,5 +34,22 @@
       </div>
     </div>
   </form>
-  </div>
+    </div>
+
+    <div class="col-md-12" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-repeat="s in stores" ng-if="stores.length>0">
+      <div class="container-fluid card" style="padding-bottom:10px;">
+        <div class="row" style="border-bottom: 1px solid #dedede;">
+          <!-- <span class="pull-right" style="padding-right:15px"><h4>#{{data.pk}}</h4></span> -->
+          <span class="text-center"><h3>{{s.name}}</h3></span>
+        </div>
+        <div class="row container-fluid" style="padding-top:20px;">
+          <div class="col-md-12">
+            <strong>Email :</strong>{{s.email}} <br>
+            <strong>Mobile :</strong> {{s.mobile}} <br>
+            <strong>Address :</strong> {{s.address}} <br>
+            <strong>Pincode :</strong> {{s.pincode}} <br>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
