--- a/support/static/ngTemplates/app.customers.document.html
+++ b/support/static/ngTemplates/app.customers.document.html
@@ -32,14 +32,80 @@
             <label>Title</label>
             <input type="text " class="form-control" ng-model="docForm.title">
           </div>
+          <div class="row">
+          <div class="col-md-9">
           <div class="form-group" ng-if="docForm.text!=null">
             <label>Content</label>
             <textarea ui-tinymce="tinymceOptions" ng-model="docForm.text"></textarea>
           </div>
+          </div>
+          <div class="col-md-3">
+            <uib-tabset>
+              <uib-tab>
+                <uib-tab-heading>
+                  Article
+                </uib-tab-heading>
+                  <div >
+                    <p style="color:red;margin:15px 0px">Category</p>
+                    <select class="form-control" id="category" style="margin:5px 0px">
+                      <option>Syrow</option>
+                      <option>erp</option>
+                      <option>random</option>
+                    </select>
+                    <select class="form-control" id="" style="margin:5px 0px">
+                      <option>Syrow</option>
+                      <option>erp</option>
+                      <option>random</option>
+                    </select>
+                    <p style="color:red;margin:15px 0px">Article owner</p>
+                    <select class="form-control" id="" style="margin:5px 0px">
+                      <option>Syrow</option>
+                      <option>erp</option>
+                      <option>random</option>
+                    </select>
+                    <p style="color:red;margin:20px 0px">Display permission</p>
+                        <ul class="list-group">
+                          <li class="active"><a href="#">Agents</a></li>
+                          <li><a href="#">Reg</a></li>
+                          <li><a href="#">All</a></li>
+                        </ul>
+
+                  </div>
+              </uib-tab>
+              <uib-tab>
+                  <uib-tab-heading>
+                      TOC
+                  </uib-tab-heading>
+                  <div class="toc">
+                    <ol style="margin:20px 0px;">
+                      <li style="color:  #5257d2;font-size:20px;" ng-repeat="x in h1_array" ng-if="$index!=0">{{x.title}}
+                        <ol>
+                          <li style="margin:10px 0px;color:black;font-size:15px"ng-repeat="y in x.childeren" ng-if="$index!=0">{{y.title}}</li>
+                        </ol>
+                      </li>
+                    </ol>
+                  </div>
+
+              </uib-tab>
+              <uib-tab>
+                  <uib-tab-heading>
+                      Versions
+                  </uib-tab-heading>
+                  <div class="versions" style="margin:30px 0px">
+                    <div ng-repeat='version in versions' >
+                            <button  style="width:100%;padding:5px"ng-class="{active : activeVersion === version}" ng-click="setActive(version)"> {{ version }}</button>
+                    </div>
+
+                  </div>
+              </uib-tab>
+            </uib-tabset>
+          </div>
+        </div>
           <div class="form-group" ng-if="docForm.docs!=null">
             <label>Document</label>
             <input type="file" file-model="docForm.docs">
           </div>
+
         </div>
         <div class="row" style="padding:20px">
           <div class="col-md-2 col-md-offset-5">
