--- a/support/static/ngTemplates/app.customers.document.html
+++ b/support/static/ngTemplates/app.customers.document.html
@@ -15,6 +15,7 @@
       </div>
     </div>
     <hr>
+    {{versions}}
     <div class="row" style="padding-top:15px">
       <div class="col-md-3">
         <div class="row" style="border-right:solid 2px #eeeeee;min-height:82vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
