--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -70,12 +70,12 @@
       <div class="row" style="padding:0px;" ng-repeat="message in data.messages track by $index">
         <div class="row container-fluid">
           <div style="float:{{message.sentByAgent ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:10px;margin:8px;border-radius:{{message.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
-          <p ng-if="message.message.length>0 && message.attachmentType!='youtubeLink'" style="word-break: break-all !important;" >{{message.message}}</p>
+          <p ng-if="message.message.length>0 && message.attachmentType!='youtubeLink'" style="word-break: break-all !important;" > <span ng-if="message.message.includes('www.') || message.message.includes('http')"> <a href="{{message.message}}"> {{message.message}}</a> </span> <span ng-if="!message.message.includes('www.') && !message.message.includes('http')">{{message.message}}</span> </p>
            <img ng-if="message.attachmentType == 'image'" ng-src="{{message.attachment}}" style="width:250px;">
            <video ng-if="message.attachmentType == 'video'" width="280" height="240" ng-src="{{message.attachment}}" controls></video>
            <audio ng-if="message.attachmentType == 'audio'" ng-src="{{message.attachment}}" controls></audio>
            <p class="text-center" ng-if="message.attachmentType == 'application'" style="word-wrap: break-word;"><a ng-href="{{message.attachment}}" target = "_blank" ><i class="fa {{message.attachment.split('chat/')[1] | fileTypeIcon }} fa-2x" ></i></a> <br> {{message.attachment.split('chat/')[1]}}  </p>
-           <div ng-if="message.attachmentType == 'youtubeLink'" >
+           <div ng-if="message.attachmentType == 'youtubeLink'">
              <iframe width="100%" height="215" ng-src="{{message.message | trusted}}" frameborder="0" allowfullscreen></iframe>
            </div>
           </div>
