--- a/support/static/ngTemplates/app.customers.document.html
+++ b/support/static/ngTemplates/app.customers.document.html
@@ -93,7 +93,7 @@
                   </uib-tab-heading>
                   <div class="versions" style="margin:30px 0px">
                     <div ng-repeat='version in versions' >
-                            <button  style="width:100%;padding:5px"ng-class="{active : activeVersion === version}" ng-click="setActive(version)"> {{ version }}</button>
+                            <button  style="width:100%;padding:7px;"ng-class="{active : activeVersion === version}" ng-click="setActive(version)"> {{ version }}</button>
                     </div>
 
                   </div>
